--- a/Presentation/E.C.Products.API/E.C.Products.API.csproj
+++ b/Presentation/E.C.Products.API/E.C.Products.API.csproj
@@ -15,4 +15,8 @@
     <Folder Include="Controllers\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="7.0.8" />
+  </ItemGroup>
+
 </Project>
