--- a/Presentation/E.C.Products.API/appsettings.json
+++ b/Presentation/E.C.Products.API/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "ConnectionStrings": {
+    "DefaultConnection": "Data Source=.\\sqlexpress;Initial Catalog=ECommerceProductDB;Persist Security Info=True;User ID=sa;Password=123456"
+  },
   "AllowedHosts": "*"
 }
