--- a/Presentation/E.C.Products.API/E.C.Products.API.csproj
+++ b/Presentation/E.C.Products.API/E.C.Products.API.csproj
@@ -16,6 +16,9 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="GraphQL.Server.Transports.AspNetCore" Version="7.5.0" />
+    <PackageReference Include="HotChocolate.AspNetCore" Version="13.3.1" />
+    <PackageReference Include="HotChocolate.Data.EntityFramework" Version="13.3.1" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="7.0.8" />
   </ItemGroup>
 
