new category root added and its depencencies such as query and repository were added. Facing and issue with dbcontext instantiation "Cannot access a disposed context instance."

--- a/Infrastructure/E.C.Products.Infrastructure/E.C.Products.Infrastructure.csproj
+++ b/Infrastructure/E.C.Products.Infrastructure/E.C.Products.Infrastructure.csproj
@@ -11,7 +11,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\E.C.Products.Domain\E.C.Products.Domain.csproj" />
+    <ProjectReference Include="..\..\Core\E.C.Products.Application\E.C.Products.Application.csproj" />
+    <ProjectReference Include="..\..\Core\E.C.Products.Domain\E.C.Products.Domain.csproj" />
   </ItemGroup>
 
 </Project>
