--- a/Presentation/E.C.Products.API/appsettings.json
+++ b/Presentation/E.C.Products.API/appsettings.json
@@ -6,7 +6,7 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=.\\sqlexpress;Initial Catalog=ECommerceProductDB;Persist Security Info=True;User ID=sa;Password=123456"
+    "DefaultConnection": "Data Source=.\\sqlexpress;Initial Catalog=ECommerceProductDB;Persist Security Info=True;User ID=sa;Password=123456;TrustServerCertificate=True"
   },
   "AllowedHosts": "*"
 }
